Fixed alignment of categories.

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -126,7 +126,6 @@ p.sushi {
   }
   h1 {
       text-align: left;
-      margin-left: 10px;
   }
   h1.sm_title:before {
     font-family: fantasy;
